[gd_scene load_steps=13 format=3 uid="uid://d0kconcmboikf"]

[ext_resource type="Texture2D" uid="uid://bo0kqhwnrgkoe" path="res://Weapons/Shotgun/shottygun.png" id="1_iutki"]
[ext_resource type="Script" path="res://Weapons/Shotgun/shotgun.gd" id="1_qcv82"]
[ext_resource type="PackedScene" uid="uid://cbc380nwix1tj" path="res://Player/Lasso/lasso_end.tscn" id="2_1g5gh"]
[ext_resource type="PackedScene" uid="uid://cvhj8pkltpbe2" path="res://Interactions/pickup.tscn" id="3_pbn7s"]
[ext_resource type="PackedScene" uid="uid://bheexrwmv230r" path="res://ammunition_component.tscn" id="4_rotuv"]
[ext_resource type="Texture2D" uid="uid://cu76jeoqf1tox" path="res://Weapons/hand.png" id="5_d3wea"]

[sub_resource type="Animation" id="Animation_lqvww"]
resource_name = "shot"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.174533, 0.0]
}

[sub_resource type="Animation" id="Animation_jhamb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yui24"]
_data = {
"RESET": SubResource("Animation_jhamb"),
"shot": SubResource("Animation_lqvww")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_luhfb"]
size = Vector2(16, 4)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f75jg"]
radius = 2.5
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rl2us"]
radius = 11.0

[node name="Shotgun" type="CharacterBody2D"]
collision_mask = 8
script = ExtResource("1_qcv82")
bulletSpeed = 320.0
weapon_damage = 18.0
random_spread = 0.25
metadata/AmmoType = "Shotgun"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(7, 0)

[node name="Shotgun" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_iutki")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Shotgun")
libraries = {
"": SubResource("AnimationLibrary_yui24")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_luhfb")

[node name="LassoEnd" parent="." groups=["Lassoable"] instance=ExtResource("2_1g5gh")]

[node name="Area2D" parent="LassoEnd" index="2"]
collision_mask = 16

[node name="CollisionShape2D" parent="LassoEnd/Area2D" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f75jg")

[node name="Pickup" parent="." instance=ExtResource("3_pbn7s")]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" parent="Pickup" index="0"]
shape = SubResource("CircleShape2D_rl2us")

[node name="AmmunitionComponent" parent="." instance=ExtResource("4_rotuv")]
MAX_AMMO = 2

[node name="Hand" type="Sprite2D" parent="."]
position = Vector2(-2, 1)
texture = ExtResource("5_d3wea")

[node name="ShootSpeedTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Pickup" to="Pickup" method="_on_area_entered"]
[connection signal="area_exited" from="Pickup" to="Pickup" method="_on_area_exited"]
[connection signal="timeout" from="ShootSpeedTimer" to="." method="_on_shoot_speed_timer_timeout"]

[editable path="LassoEnd"]
[editable path="Pickup"]
